cmake_minimum_required(VERSION 4.0)
project(hackerrankcppcodes)

set(CMAKE_CXX_STANDARD 14)

add_executable(hackerrankcppcodes
        hackerankcode1.cpp
        hackerankcode2.cpp
        hackerankcode3.cpp
        hackerankcode4.cpp
        hackerankcode5.cpp
        hackerrankecode6.cpp
        hackerankcode7.cpp
        hackerankcode8.cpp
        hackerankcode9.cpp
        hackerankcode10.cpp
        hackerankcode11.cpp
        hackerrankcode12.cpp)
